--- a/src/frontend/containers/RegisterPage/styles.scss
+++ b/src/frontend/containers/RegisterPage/styles.scss
@@ -3,3 +3,25 @@
     margin-left: 108px;
     margin-top: 36px;
 }
+
+.Footer{
+	background:rgba(0, 0, 0, .25);
+	padding-top: 30px;
+	padding-bottom: 30px;
+	bottom: 0px;
+	position: fixed;
+	width: 100%;
+}
+.flex{
+	display: flex;
+	justify-content: space-around;
+}
+
+.Footer button{
+	width: 200px;
+	height: 40px;
+	font-size: 20pt;
+	background-color: white;
+	font-weight: bold;
+	display: block;
+}
