--- a/src/frontend/containers/SettingsPage/styles.scss
+++ b/src/frontend/containers/SettingsPage/styles.scss
@@ -1,41 +1,33 @@
 @charset "UTF-8";
+* {
+  box-sizing: border-box;
+}
 .Content{
     margin-left: 108px;
     margin-top: 36px;
 }
 .Total {
-    column-count: 2;
-    column-rule-style: solid;
-    column-rule-width: 1px;
-    display: block;
-	margin-top: 0px;
-	margin-bottom: 70px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
-.Total .Left {
-	vertical-align: top;
-    display: inline-block;
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0,0,0, 0.5);
 }
-.Total .Right {
-	display: block;
-	vertical-align: top;
-}
-.Footer{
-	background:rgba(0, 0, 0, .25);
-	padding-top: 10px;
-	padding-bottom: 10px;
-	bottom: 0px;
-	position: fixed;
-	width: 100%;
-}
-.flex{
-	display: flex;
-	justify-content: space-around;
-}
-.Footer button{
-	width: 200px;
-	height: 40px;
-	font-size: 20pt;
-	background-color: white;
-	font-weight: bold;
-	display: block;
+.popup_inner {
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  margin: auto;
+  background: white;
+  padding: 20px;
 }
