Cleans up frontend for presentation

--- a/src/frontend/containers/AboutPage/styles.scss
+++ b/src/frontend/containers/AboutPage/styles.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-.Content{
-    margin-left: 108px;
-    margin-top: 36px;
+
+.aboutPage {
+  .Content {
+      margin-left: 108px;
+      margin-top: 36px;
+  }
 }
