--- a/src/frontend/containers/HomePage/styles.scss
+++ b/src/frontend/containers/HomePage/styles.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-.Content{
-    margin-left: 108px;
-    margin-top: 36px;
+
+.homePage {
+  .Content {
+      margin-left: 108px;
+      margin-top: 36px;
+  }
 }
