--- a/src/frontend/containers/InventoryPage/styles.scss
+++ b/src/frontend/containers/InventoryPage/styles.scss
@@ -1,6 +1,8 @@
 @charset "UTF-8";
-.Content{
-  margin-left: 108px;
-  margin-top: 36px;
-}
 
+.inventoryPage {
+  .Content {
+    margin-left: 108px;
+    margin-top: 36px;
+  }
+}
