--- a/src/frontend/containers/SettingsPage/styles.scss
+++ b/src/frontend/containers/SettingsPage/styles.scss
@@ -1,33 +1,36 @@
 @charset "UTF-8";
-* {
-  box-sizing: border-box;
-}
-.Content{
-    margin-left: 108px;
-    margin-top: 36px;
-}
-.Total {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-}
-.popup {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  background-color: rgba(0,0,0, 0.5);
-}
-.popup_inner {
-  position: absolute;
-  left: 25%;
-  right: 25%;
-  top: 25%;
-  bottom: 25%;
-  margin: auto;
-  background: white;
-  padding: 20px;
+
+.settingsPage {
+  * {
+    box-sizing: border-box;
+  }
+  .Content {
+      margin-left: 108px;
+      margin-top: 36px;
+  }
+  .Total {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  }
+  .popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: rgba(0,0,0, 0.5);
+  }
+  .popup_inner {
+    position: absolute;
+    left: 25%;
+    right: 25%;
+    top: 25%;
+    bottom: 25%;
+    margin: auto;
+    background: white;
+    padding: 20px;
+  }
 }
