--- a/src/frontend/containers/RegisterPage/styles.scss
+++ b/src/frontend/containers/RegisterPage/styles.scss
@@ -1,51 +1,12 @@
 @charset "UTF-8";
 
+body > div,
+body > div > div,
+body > div > div > div.registerPage {
+	height: 100%;
+}
+
 .registerPage {
-  .Content {
-      margin-top: 24px;
-      margin-left: 24px;
-  }
-
-  .Footer {
-  	background:rgba(0, 0, 0, .25);
-  	padding-top: 30px;
-  	padding-bottom: 30px;
-  	bottom: 0px;
-  	position: fixed;
-  	width: 100%;
-  }
-  .flex {
-  	display: flex;
-  	justify-content: space-around;
-  }
-
-  .Footer button {
-  	width: 200px;
-  	height: 40px;
-  	font-size: 20pt;
-  	background-color: white;
-  	font-weight: bold;
-  	display: block;
-  }
-
-
-  .button {
-  	background-color: white;
-  	border: 2px solid #555555;
-  	color: black;
-  	padding: 4px 8px;
-  	text-align: center;
-  	text-decoration: none;
-  	display: inline-block;
-  	font-size: 12px;
-  	margin: 4px 2px;
-  	-webkit-transition-duration: 0.1s; /* Safari */
-  	transition-duration: 0.1s;
-  	cursor: pointer;
-    }
-
-  .button:hover {
-  	background-color: #555555;
-  	color: white;
-  }
+	height: 100vh;
+  width: 100%;
 }
