--- a/src/backend/assets/templates/defaultInvite.html
+++ b/src/backend/assets/templates/defaultInvite.html
@@ -1,5 +1,57 @@
+<head>
+  <style type="text/css">
+    .boxed {
+      border: 1px solid black ;
+      background-color:  #25BC6E;
+      font-size: 24px;
+    }
+  </style>
+</head>
+
 <html>
-  <h2>Join Pantry Maestro (HTML)</h2>
+<!--   <h2>Join Pantry Maestro (HTML)</h2>
   <p>Hello, you were invited to join {{workspace_name}}.</p>
-  <p>Token: {{token}}</p>
+  <p>Token: {{token}}</p> -->
+  <body bgcolor = "#EFFCF4" style="margin: 0;padding: 50;">
+    <table bgcolor = "#EDE593"align = "center" border="1" cellpadding = "0" cellspacing="0" width = "600" style="border-collapse: collapse">
+      <tr>        
+        <td align="center" style="padding: 40px 0 30px 0;">
+          <img src="PantryMaestroLogo.png" alt="path machine broke" width="400" height="250" style="display: block;">
+        </td>
+      </tr>
+
+      <tr>
+        <td style="padding: 30px 10px 30px;">
+          <table bgcolor = "#EFFCF4" border="1" cellpadding="0" cellspacing="0" width="100%">
+            <tr>
+              <td align="center" style="padding: 20px 20px; font-size: 24px;">
+                <b>Join Pantry Maestro Workspace!</b> 
+              </td>
+            </tr>
+            
+            <tr>
+              <td align="left" style="padding: 20px 20px; font-size: 18px;">
+                Hello, you were invited to join {{workspace_name}}! To join, please use the invite token below.   
+              </td>
+            </tr>
+
+            <tr>
+              <td align="center" style="padding: 10px 20px;">
+                <div class="boxed">
+                    Token: {{token}}
+                </div>
+              </td>
+            </tr>
+
+          </table>
+        </td>
+      </tr>
+
+      <tr>
+        <td style="padding: 10px 10px;">
+          © Pantry Maestro 2019, Team 6 LUL
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
