Attemps to fix callback bug with Nodemailer

--- a/src/backend/assets/templates/defaultInvite.html
+++ b/src/backend/assets/templates/defaultInvite.html
@@ -55,7 +55,7 @@
 
       <tr>
         <td style="padding: 10px 10px;">
-          © Pantry Maestro 2019, Team 6 LUL
+          © Pantry Maestro 2019, Team 6
         </td>
       </tr>
     </table>
