--- a/src/frontend/containers/InvitePage/styles.scss
+++ b/src/frontend/containers/InvitePage/styles.scss
@@ -1,31 +1,12 @@
 @charset "UTF-8";
 
-.registerPage {
-  .Content {
-      margin-top: 24px;
-      margin-left: 24px;
-  }
+body > div,
+body > div > div,
+body > div > div > div.invitePage {
+	height: 100%;
+}
 
-  .Footer {
-  	background:rgba(0, 0, 0, .25);
-  	padding-top: 30px;
-  	padding-bottom: 30px;
-  	bottom: 0px;
-  	position: fixed;
-  	width: 100%;
-  }
-  .flex {
-  	display: flex;
-  	justify-content: space-around;
-  }
-
-  .Footer button {
-  	width: 200px;
-  	height: 40px;
-  	font-size: 20pt;
-  	background-color: white;
-  	font-weight: bold;
-  	display: block;
-  }
-
+.invitePage {
+	height: 100vh;
+  width: 100%;
 }
