--- a/src/frontend/containers/CheckoutPage/styles.scss
+++ b/src/frontend/containers/CheckoutPage/styles.scss
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
-.checkoutPage {
+.CheckoutPage {
   display:flex;
   .Content {
     flex: 1;
-    margin-left: 1080px;
+    margin-left: 108px;
     margin-top: 24px;
   }
 }
