--- a/src/backend/assets/templates/defaultInvite.html
+++ b/src/backend/assets/templates/defaultInvite.html
@@ -20,7 +20,7 @@
     <table bgcolor = "#EDE593"align = "center" border="1" cellpadding = "0" cellspacing="0" width = "600" style="border-collapse: collapse">
       <tr>
         <td align="center" style="padding: 40px 0 30px 0;">
-          <img src="cid:logo" alt="img" width="400" height="250" style="display: block;"/>
+          <img src="PantryMaestroLogo.png" alt="img" width="400" height="250" style="display: block;"/>
         </td>
       </tr>
 
