Added Workspace invite Accept and Decline emails, some formatting updates on email

--- a/src/backend/assets/templates/inviteAccept.html
+++ b/src/backend/assets/templates/inviteAccept.html
@@ -18,8 +18,8 @@
   <body bgcolor = "#EFFCF4" style="margin: 0;padding: 50;">
     <table bgcolor = "#EDE593"align = "center" border="1" cellpadding = "0" cellspacing="0" width = "600" style="border-collapse: collapse">
         <tr>
-            <td bgcolor = "#F2F963" align="center" style="padding: 20px 20px; font-size: 28px;">
-                <b>⚠️ Pantry Maestro Workspace Update ⚠️</b>
+            <td bgcolor = "#F2F963" align="center" style="padding: 20px 10px; font-size: 28px;">
+                <b>✅ Pantry Maestro Workspace Acceptance ✅</b>
             </td>
         </tr>
       
@@ -30,12 +30,12 @@
       </tr>
 
       <tr>
-        <td style="padding: 30px 10px 30px;">
+        <td style="padding: 30px 5px 30px;">
           <table bgcolor = "#EFFCF4" border="1" cellpadding="0" cellspacing="0" width="100%">
         
             <tr>
               <td align="center" style="padding: 20px 20px; font-size: 18px;">
-                Hello, a user has left your workspace, {{workspace_name}}.
+                Hello, a user has accepted an invite to your workspace, {{workspace_name}}.
               </td>
             </tr>
 
