--- a/src/frontend/containers/InventoryPage/styles.scss
+++ b/src/frontend/containers/InventoryPage/styles.scss
@@ -2,12 +2,11 @@
 
 .inventoryPage {
   display:flex;
-  .Content {
+  .MainContent {
     flex: 1;
     margin-left: 108px;
     margin-top: 24px;
   }
-  Modal {
-    position: relative;
-  }
+
 }
+
