--- a/src/frontend/containers/WorkspacePage/styles.scss
+++ b/src/frontend/containers/WorkspacePage/styles.scss
@@ -5,7 +5,7 @@
     box-sizing: border-box;
   }
   display:flex;
-  .Content {
+  .MainContent {
     flex: 1;
     margin-left: 108px;
     margin-top: 24px;
