Adds functionality to send emails when invitees accept or decline invites or when users leave a workspace

--- a/src/backend/assets/templates/defaultInvite.html
+++ b/src/backend/assets/templates/defaultInvite.html
@@ -13,14 +13,11 @@
 </head>
 
 <html>
-<!--   <h2>Join Pantry Maestro (HTML)</h2>
-  <p>Hello, you were invited to join {{workspace_name}}.</p>
-  <p>Token: {{token}}</p> -->
   <body bgcolor = "#EFFCF4" style="margin: 0;padding: 50;">
     <table bgcolor = "#EDE593"align = "center" border="1" cellpadding = "0" cellspacing="0" width = "600" style="border-collapse: collapse">
       <tr>
         <td align="center" style="padding: 40px 0 30px 0;">
-          <img src="PantryMaestroLogo.png" alt="img" width="400" height="250" style="display: block;"/>
+          <img src="cid:logo" alt="img" width="400" height="250" style="display: block;"/>
         </td>
       </tr>
 
