--- a/src/backend/assets/templates/inviteDecline.html
+++ b/src/backend/assets/templates/inviteDecline.html
@@ -19,20 +19,20 @@
     <table bgcolor = "#EDE593"align = "center" border="1" cellpadding = "0" cellspacing="0" width = "600" style="border-collapse: collapse">
         <tr>
             <td bgcolor = "#F2F963" align="center" style="padding: 20px 10px; font-size: 28px;">
-                <b>❌ Pantry Maestro Workspace Declined ❌</b>
+                <b>❌ Pantry Maestro Workspace Invite Declined ❌</b>
             </td>
         </tr>
-      
+
         <tr>
         <td align="center" style="padding: 20px 0 10px 0;">
-          <img src="PantryMaestroLogo.png" alt="img" width="300" height="188" style="display: block;"/>
+          <img src="cid:logo" alt="img" width="300" height="188" style="display: block;"/>
         </td>
       </tr>
 
       <tr>
         <td style="padding: 30px 5px 30px;">
           <table bgcolor = "#EFFCF4" border="1" cellpadding="0" cellspacing="0" width="100%">
-        
+
             <tr>
               <td align="center" style="padding: 20px 20px; font-size: 18px;">
                 Note, a user has DECLINED an invite to your workspace, {{workspace_name}}.
@@ -42,7 +42,7 @@
             <tr>
               <td align="center" style="padding: 10px 20px;">
                 <div class="boxed">
-                  <form action="https://pantrymaestro.herokuapp.com//{{token}}" method="get" target="_blank" style="margin: 0;">
+                  <form action="https://pantrymaestro.herokuapp.com/ method="get" target="_blank" style="margin: 0;">
                     <button class="redeemTokenButton" style="width: 100%; background: none; border: none; font-size: 20px; padding: 10px;">To view {{workspace_name}}, click here</button>
                   </form>
                 </div>
