--- a/src/frontend/containers/CheckoutPage/styles.scss
+++ b/src/frontend/containers/CheckoutPage/styles.scss
@@ -6,6 +6,13 @@
     flex: 1;
     margin-left: 108px;
     margin-top: 24px;
+    margin-right: 30%;
     margin-bottom: cover;
+    .CheckoutUiButton {
+      position: fixed;
+      margin-left: 70%;
+      right: 10px;
+      top: 36px;
+    }
   }
 }
