--- a/src/frontend/containers/WorkspacePage/styles.scss
+++ b/src/frontend/containers/WorkspacePage/styles.scss
@@ -4,7 +4,9 @@
   * {
     box-sizing: border-box;
   }
+  display: flex;
   .MainContent {
+    flex: 1;
     margin-left: 108px;
     margin-top: 24px;
     margin-right: 10px;
